CHanged threadId() to getId() since it requires java 19+